# emle-bespoke

./: .gitattributes  .gitignore  README.md  environment.yaml  pyproject.toml
.github/workflows/: docs.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
docs/source/api/: index.rst
emle-bespoke/: pyproject.toml
emle-bespoke/src/emle_bespoke/: _constants.py
emle-bespoke/src/emle_bespoke.egg-info/: top_level.txt
examples/: create_bespoke_model.py  main_fes_orca.py  qm7.py
examples/DES_dimers/: DESS66x8.csv  README.md  process_des.py
examples/DES_dimers/fitting/: _training_utils.py  fit_des.py  fit_des_emle.py  fit_des_lj.py
examples/DES_dimers/pre_processing/: README.md  process_all.sh  process_des.py
examples/LJ_ab_initio/: derive_lj_ai.py
examples/LJ_ab_initio/elements/c/: c.xyz  horton.out  orca.densities  orca.gbw  orca.inp  orca.molden.input  orca.out  orca_property.txt  read_horton.py
examples/LJ_ab_initio/elements/h/: h.xyz  horton.out  orca.densities  orca.gbw  orca.inp  orca.molden.input  orca.out  orca_property.txt
examples/LJ_ab_initio/elements/n/: horton.out  n.xyz  orca.densities  orca.gbw  orca.inp  orca.molden.input  orca.out  orca_property.txt
examples/LJ_ab_initio/elements/o/: horton.out  o.xyz  orca.densities  orca.gbw  orca.inp  orca.molden.input  orca.out  orca_property.txt  read_horton.py
examples/LJ_ab_initio/elements/s/: horton.out  orca.densities  orca.gbw  orca.inp  orca.molden.input  orca.out  orca_property.txt  s.xyz
examples/mnsol_sampling/: mnsol_benchmark.csv  run.sh  sampling.slurm
examples/notebooks/: qm_mm_analyzer.ipynb
notebooks/: all_data copy.ipynb  all_data.ipynb  analyse_model_accuracy.ipynb  chemical_env.ipynb  lj_fitting_analyzer.ipynb  plot_comp_paper.ipynb  qm_mm_analyzer.ipynb  qm_mm_analyzer_merged copy.ipynb  qm_mm_analyzer_merged.ipynb
notebooks/data/: plot.ipynb
src/emle_bespoke/: __init__.py  _constants.py  _emle_bespoke.py  _log.py  _sampler.py  _train.py  _train_m.py  _version.py  bespoke.py  bespoke_trainer.py  dataset.py  emle_force.py  reference_data.py  sampler.py  utils.py
src/emle_bespoke.egg-info/: PKG-INFO  SOURCES.txt
src/emle_bespoke/calculators/: __init__.py  _base.py  _horton.py  _orca.py  _reference.py  _reference_data.py
src/emle_bespoke/cli/: __init__.py  _fit_lj.py  _sample.py  _sample_cli.py  _sample_train.py  _sample_train_lj.py  _script.py  _train.py  _train_cli.py  _train_model.py
src/emle_bespoke/lj/: __init__.py  _lj_potential.py  _lj_potential_efficient.py  _loss.py  _mbis.py
src/emle_bespoke/lj_fitting/: __init__.py  _dimers_gen.py  _geometry.py  _lj_fitting.py  _lj_fitting_old.py  _lj_potential.py  _loss.py  _loss_exp_reweighting.py  _mcmc.py  _utils.py  a.py  run_lj.py
src/emle_bespoke/loss/: __init__.py  _base.py  _interaction_energy.py  _patching.py  _weighted_mse.py
src/emle_bespoke/parsers/: __init__.py  _horton.py  _orca_parser.py
src/emle_bespoke/patching/: __init__.py  _emle.py  _loss.py
src/emle_bespoke/samplers/: __init__.py  _base.py  _dimers.py  _mcmc.py  _md.py  _openmm_sampler.py  _utils.py
src/emle_bespoke/train/: __init__.py  _emle.py  _loss.py  _trainer.py
tests/: test_impl.ipynb
utils/: DESS66x8.ipynb  converter.ipynb  des.py  des_boltzmann.ipynb  des_final.ipynb  des_openff.ipynb  merge_datasets.py  parse_des.py  sapt.ipynb
