[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emle-bespoke"
description = "A package for training and patching EMLE models, with routines for fitting LJ parameters. "
requires-python = ">=3.9"
keywords = ["free energy simulation", "free energy", "force field", "machine learning", "openmm"]
authors = [{email = "jmorado@ed.ac.uk"},{name = "Joao Morado"}]
maintainers = [{name = "Joao Morado", email = "jmorado@ed.ac.uk"}]
classifiers = [
  "License :: OSI Approved :: GPL License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Oceanography Modeling",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10"
]

dynamic = [
  "version",
  "dependencies"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.md"
content-type = "text/markdown"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]

[project.urls]
repository = "https://github.com/michellab/emle-bespoke"

[project.scripts]
emle-bespoke = "emle_bespoke.cli._train_model:main"

[tool.coverage.run]
source = ['src/emle_bespoke']

[tool.setuptools.dynamic]
version = {attr = "emle_bespoke.__init__.__version__"}
# dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*__pycache__*"]
namespaces = true
