[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "emle-bespoke"
description = "A package for training and patching EMLE models, with routines for fitting LJ parameters. "
requires-python = ">=3.10"
keywords = ["free energy simulation", "free energy", "force field", "machine learning", "openmm"]
authors = [{email = "jmorado@ed.ac.uk"},{name = "Joao Morado"}]
maintainers = [{name = "Joao Morado", email = "jmorado@ed.ac.uk"}]
classifiers = [
  "License :: OSI Approved :: GPL License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10"
]

dynamic = [
  "version",
  "dependencies"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.md"
content-type = "text/markdown"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]

[project.urls]
repository = "https://github.com/michellab/emle-bespoke"

[project.scripts]
emle-bespoke = "emle_bespoke.cli._sample_train:main"
emle-bespoke-lj = "emle_bespoke.cli._sample_train_lj:main"
emle-bespoke-train = "emle_bespoke.cli._train:main"

[tool.coverage.run]
source = ['src/emle_bespoke']

[tool.setuptools.dynamic]
version = {attr = "emle_bespoke.__version__"}
# dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*__pycache__*"]
namespaces = true

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/emle_bespoke/_version.py"
versionfile_build = "emle_bespoke/_version.py"
tag_prefix = ""
parentdir_prefix = "emle_bespoke-"
